# Cross-platform-development-on-Qt

./: README.md
Lesson2/: .gitignore
Lesson2/TheMainQtModules/: CMakeLists.txt  main.cpp
Lesson2/The_main_Qt_modules/: main.cpp
Lesson2/build-The_main_Qt_modules-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev
Lesson2/build-The_main_Qt_modules-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-4b5b605287bcb9acfce4.json  (+2 more)
Lesson2/build-The_main_Qt_modules-Desktop-Debug/The_main_Qt_modules_autogen/EWIEGA46WW/: moc_mainwindow.cpp
Lesson3/Qt_Designer/: CMakeLists.txt  connectdb.cpp  connectdb.h  connectdb.ui  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson3/build-Qt_Designer-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Lesson3/build-Qt_Designer-Desktop-Debug/.qt/: QtDeploySupport.cmake
Lesson3/build-Qt_Designer-Desktop-Debug/Qt_Designer_autogen/EWIEGA46WW/: moc_dialog.cpp  moc_dialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
Lesson3/build-Qt_Designer-Desktop-Debug/Qt_Designer_autogen/include/: ui_dialog.h
Lesson4/Widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
The_main_Qt_modules/: CMakeLists.txt
build-The_main_Qt_modules-Desktop-Debug/: Makefile  cmake_install.cmake
build-The_main_Qt_modules-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-f80c86c80e605f7d7767.json  codemodel-v2-90fe7f08f2ec212c0100.json  index-2023-07-11T15-52-01-0938.json  target-The_main_Qt_modules-Debug-7c9b5e36ab23632dcd8b.json
build-The_main_Qt_modules-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-e4018047f45ca01e06bc.json  codemodel-v2-a8a422662e3ebec1dcb8.json
build-The_main_Qt_modules-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-The_main_Qt_modules-Desktop-Debug/The_main_Qt_modules_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
(+8 files in other folders)
